force-app/main/default/objects/Crop_Report_Data__c/Crop_Report_Data__c.object-meta.xml
<CustomObject>
    <description>Crop Report Data from the USDA or another source.</description>
    <label>Crop Report Data</label>
    <nameField>
        <label>Crop Report Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crop Report Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>