force-app/main/default/objects/Crop_Report_Data__c/fields/Acres__c.field-meta.xml
<CustomField>
    <fullName>Acres__c</fullName>
    <description>Amount of Acres per level</description>
    <label>Acres</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>