force-app/main/default/objects/Crop_Report_Data__c/fields/Ag_District__c.field-meta.xml
<CustomField>
    <fullName>Ag_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ag District</label>
    <referenceTo>Ag_District__c</referenceTo>
    <relationshipLabel>Crop Report Data</relationshipLabel>
    <relationshipName>Crop_Report_Data</relationshipName>
    <type>Lookup</type>
</CustomField>