force-app/main/default/objects/Crop_Report_Data__c/fields/Ag_District_Id__c.field-meta.xml
<CustomField>
    <fullName>Ag_District_Id__c</fullName>
    <formula>Ag_District__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ag District Id</label>
    <type>Text</type>
</CustomField>