force-app/main/default/objects/Crop_Report_Data__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <referenceTo>County__c</referenceTo>
    <relationshipLabel>Crop Report Data</relationshipLabel>
    <relationshipName>Crop_Report_Data</relationshipName>
    <type>Lookup</type>
</CustomField>