force-app/main/default/objects/Crop_Report_Data__c/fields/County_Id__c.field-meta.xml
<CustomField>
    <fullName>County_Id__c</fullName>
    <formula>County__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County Id</label>
    <type>Text</type>
</CustomField>