force-app/main/default/objects/Crop_Report_Data__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <description>Crop whose data is reflected in the data shown</description>
    <label>Crop</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soybeans</fullName>
                <default>true</default>
                <label>Soybeans</label>
            </value>
            <value>
                <fullName>Corn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>