force-app/main/default/objects/Crop_Report_Data__c/fields/Denominator__c.field-meta.xml
<CustomField>
    <fullName>Denominator__c</fullName>
    <label>Denominator</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>