force-app/main/default/objects/Crop_Report_Data__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>This is the size/level of the data displayed</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>County</fullName>
            </value>
            <value>
                <fullName>Agricultural District</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>