force-app/main/default/objects/Crop_Report_Data__c/fields/Proportion__c.field-meta.xml
<CustomField>
    <fullName>Proportion__c</fullName>
    <label>Proportion</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>