force-app/main/default/objects/Crop_Report_Data__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Crop Report Data</relationshipLabel>
    <relationshipName>Crop_Report_Data</relationshipName>
    <type>Lookup</type>
</CustomField>