force-app/main/default/objects/Crop_Report_Data__c/fields/State_Id__c.field-meta.xml
<CustomField>
    <fullName>State_Id__c</fullName>
    <formula>State__r.Id</formula>
    <label>State Id</label>
    <type>Text</type>
</CustomField>