force-app/main/default/objects/Crop_Report_Data__c/fields/Year_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Year_Quarter__c</fullName>
    <description>Time period of the data shown</description>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YEAR</fullName>
            </value>
            <value>
                <fullName>YEAR - AUG ACREAGE</fullName>
            </value>
            <value>
                <fullName>YEAR - JUN ACREAGE</fullName>
            </value>
            <value>
                <fullName>YEAR - MAR ACREAGE</fullName>
            </value>
            <value>
                <fullName>YEAR - OCT ACREAGE</fullName>
            </value>
            <value>
                <fullName>YEAR - OCT FORECAST</fullName>
            </value>
            <value>
                <fullName>GDM - ESTIMATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>