force-app/main/default/objects/Crop_Report_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Acres__c</columns>
    <columns>Ag_District__c</columns>
    <columns>Crop__c</columns>
    <columns>Level__c</columns>
    <columns>Season__c</columns>
    <columns>Year_Quarter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Agricultural District</value>
    </filters>
    <label>All</label>
</ListView>